--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-first commit
+<!DOCTYPE html>
+    <html>
+        <head>
+            <link rel="stylesheet" href="css/normalize.css">
+            <link rel="stylesheet" href="style.css" type="text/css">
+            <title>Home Page</title>
+        </head>
+        <body>
+            <h1>Welcome to Max Fosh Loophole website!</h1>
+            <nav class = "navbar">
+                <a class = "hyperlink" href = "index.html">Home</a>
+                <a class = "hyperlink" href = "ticket.html">Tickets</a>
+                <a class = "hyperlink" href = "faq.html">FAQ</a>
+                <a class = "hyperlink" href = "contact.html">Contacts</a><br>
+            </nav>
+            <h2 class= "about">About Max Fosh</h2>
+            <div class = "info">
+                <p>Max Fosh is a 29 year old Youtuber from London, United Kingdom. He does silly things for his youtube channel called "Max Fosh".</p>
+                <img src="Max-Fosh.webp" alt="Picture of Max Fosh">
+            </div>
+            <div class = "vid">
+                <h2>More about him</h2>
+                <iframe src="https://www.youtube.com/embed/Wt7LEL1z31o?si=3vuljeEEQS0D1-Se" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br>
+            </div>
+            <div class= "more-info">
+                <h3>Read More</h3>
+                <a href = "https://youtube.fandom.com/wiki/Max_Fosh" title = "To Wikitubia">Max Fosh's Wikitubia</a>
+            </div>
+        </body>
+    </html>
