--- a/contact.html
+++ b/contact.html
@@ -1,32 +1,37 @@
 <!DOCTYPE html>
-    <html>
+    <html lang = "en">
         <head>
-            <link rel="stylesheet" href="css/normalize.css">
+            <meta charset="utf-8">
+            <link rel="stylesheet" href="normalize.css" type = "text/css">
             <link rel="stylesheet" href="style.css" type="text/css">
             <title>Contact Information</title>
         </head>
         <body>
+            <!-- Navigation Area and Title of Page -->
             <h1>Contact him here!</h1>
             <nav class = "navbar">
-                <a class = "hyperlink" href = "index.html">Home</a>
-                <a class = "hyperlink" href = "ticket.html">Tickets</a>
-                <a class = "hyperlink" href = "faq.html">FAQ</a>
-                <a class = "hyperlink" href = "contact.html">Contacts</a><br>
+                <a id = "hyperlink" href = "index.html">Home</a>
+                <a id = "hyperlink1" href = "ticket.html">Tickets</a>
+                <a id = "hyperlink2" href = "faq.html">FAQ</a>
+                <a id = "hyperlink3" href = "contact.html">Contacts</a><br>
             </nav>
+            <!-- Social Media Page Links -->
             <div class = "sm">
                 <h2>Contact/ Follow Max Fosh here:</h2>
                 <p>Instagram</p><br>
-                <img class = "image" src="Instagram.jpeg" alt="Instagram">
-                <a href = "https://www.instagram.com/max.fosh/?hl=en" title = "To Instagram Account">Instagram</a><br>
+                <img class = "image" src="images/instagram.jpeg" alt="Instagram">
+                <a id = "sm" href = "https://www.instagram.com/max.fosh/?hl=en" title = "To Instagram Account">Instagram</a><br>
                 <p>Facebook</p><br>
-                <img class = "image" src="Facebook.jpeg" alt="Facebook">
-                <a href = "https://www.facebook.com/streetsmarttelevision/" title = "To Facebook Page">Facebook</a><br>
+                <img class = "image" src="images/facebook.jpeg" alt="Facebook">
+                <a id = "sm1" href = "https://www.facebook.com/streetsmarttelevision/" title = "To Facebook Page">Facebook</a><br>
                 <p>YouTube</p><br>
-                <img class = "image" src="Youtube.webp" alt="YouTube">
-                <a href = "https://www.youtube.com/channel/UCb31gOY6OD8ES0zP8M0GhAw" title = "To Youtube Channel">YouTube</a><br>
+                <img class = "image" src="images/youtube.webp" alt="YouTube">
+                <a id = "sm2" href = "https://www.youtube.com/channel/UCb31gOY6OD8ES0zP8M0GhAw" title = "To Youtube Channel">YouTube</a><br>
                 <p>X</p><br>
-                <img class = "image" src="X.png" alt="X/Twitter">
-                <a href = "https://x.com/foshma?lang=en" title = "To X/Twitter Account">X/Twitter</a>
+                <img class = "image" src="images/x.png" alt="X/Twitter">
+                <a id = "sm3" href = "https://x.com/foshma?lang=en" title = "To X/Twitter Account">X/Twitter</a>
             </div>
+            <!-- Script Used -->
+            <script src="scripts/contact.js"></script>
         </body>
     </html>
