--- a/faq.html
+++ b/faq.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
-    <html>
+    <html lang = "en">
         <head>
-            <link rel="stylesheet" href="css/normalize.css">
+            <meta charset="utf-8">
+            <link rel="stylesheet" href="normalize.css" type = "text/css">
             <link rel="stylesheet" href="style.css" type="text/css">
             <title>Frequently Asked Questions</title>
         </head>
         <body>
+            <!-- Navigation Area and Title of Page -->
             <h1>Frequently Asked Questions</h1>
             <nav class = "navbar">
-                <a class = "hyperlink" href = "index.html">Home</a>
-                <a class = "hyperlink" href = "ticket.html">Tickets</a>
-                <a class = "hyperlink" href = "faq.html">FAQ</a>
-                <a class = "hyperlink" href = "contact.html">Contacts</a><br>
+                <a id = "hyperlink" href = "index.html">Home</a>
+                <a id = "hyperlink1" href = "ticket.html">Tickets</a>
+                <a id = "hyperlink2" href = "faq.html">FAQ</a>
+                <a id = "hyperlink3" href = "contact.html">Contacts</a><br>
             </nav>
+            <!-- Question and Answer(qna) Area -->
             <div class = "qna">
-                <p><b>Question:</b> Can I bring my baby?</p>
-                <p>This show is suitable for all human beings over the age of 12. If you wanna be a cool parent and bring kids under 12 you can but, there may be the odd rude word. Like 'knob'.</p>
-                <p><b>Question:</b> What even is this?</p>
-                <p>The show is a live comedy show about all the times I have found fun loopholes whilst making videos. There is also a loophole that I have discovered that inspired me to write this show and my word, it is so loopy, you don't need to watch any of the videos to understand the show so bring along gran if she fancies a night out at the theatre.</p>
-                <p><b>Question:</b> What if I have a whoopsie with my ticket? What then?</p>
-                <p>If you have any whoopsies with your tickets please make sure to contact the vendor who sold the ticket. That will be either the venue itself or Ticketmaster.</p>
-                <p><b>Question:</b> Will Max Fosh be there?</p><br>
-                <p>Yes, he will!</p>
+                <p class = "qn"><b>Question:</b> Can I bring my baby?</p>
+                <p class = "ans">This show is suitable for all human beings over the age of 12. If you wanna be a cool parent and bring kids under 12 you can but, there may be the odd rude word. Like 'knob'.</p>
+                <p class = "qn"><b>Question:</b> What even is this?</p>
+                <p class = "ans">The show is a live comedy show about all the times I have found fun loopholes whilst making videos. There is also a loophole that I have discovered that inspired me to write this show and my word, it is so loopy, you don't need to watch any of the videos to understand the show so bring along gran if she fancies a night out at the theatre.</p>
+                <p class = "qn"><b>Question:</b> What if I have a whoopsie with my ticket? What then?</p>
+                <p class = "ans">If you have any whoopsies with your tickets please make sure to contact the vendor who sold the ticket. That will be either the venue itself or Ticketmaster.</p>
+                <p class = "qn"><b>Question:</b> Will Max Fosh be there?</p>
+                <p class = "ans">Yes, he will!</p>
             </div>
+            <!-- Script Used -->
+            <script src="scripts/faq.js"></script>
         </body>
     </html>
